Share button alignment, Login/Signup Padding fix, other stuff

--- a/style.css
+++ b/style.css
@@ -65,73 +65,24 @@
 /*Background: full-height image, centered*/
 
 body, html {
- margin: 0;
- padding: 0;
- background-image: url(img/background.jpg);
- height: 100%;
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
-}
-
-/*Extending search bar*/
-
-.searchbar {
- position: absolute;
- top: 50%;
- left: 50%;
- transform: translate(-50%, -50%);
- background: black;
- height: 40px;
- border-radius: 15px;
- padding: 10px;
-}
-
-.searchbar:hover > .searchtext {
- width: 240px;
- padding: 0 6px;
-}
-
-.searchbar:hover > searchextend {
- background: azure;
- color: azure;
-}
-
-.searchextend {
- color: black;
- float: right;
- width: 40px;
- height: 40px;
- border-radius: 50%;
- display: flex;
- justify-content: center;
- align-items: center;
- transition: 0.2s;
- color: azure;
- cursor: pointer;
-}
-
-.searchextend > i {
- font-size: 20px;
-}
-
-.searchtext {
- border: none;
- background: none;
- outline: none;
- float: left;
- padding: 0;
- font-size: 14px;
- transition: 0.2s;
- line-height: 40px;
- width: 0px;
- color: azure;
+    position: fixed;
+    margin: 0 auto;
+    padding: 0 auto;
+    background-image: url(img/background.jpg);
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    overflow: auto;
 }
 
 /*Placeholder Color (for Searchbar)*/
 
 ::placeholder {
-  color: azure;
+    color: azure;
+    font-family: 'Krona One', sans-serif;
+    font-size: 10px;
 }
 
 /* LOGIN PAGE*/
@@ -139,10 +90,8 @@ body, html {
 .login{
     width: 300px;
     padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 10% auto;
+    display: block;
     background: black;
     border-radius: 15px;
     text-align: center;
@@ -163,7 +112,7 @@ body, html {
     text-align: center;
     font-size: 14px;
     border: 2px solid azure;
-    padding: 15px 10px;
+    padding: 13px 10px;
     width: 200px;
     outline: none;
     color: azure;
@@ -177,7 +126,7 @@ body, html {
     margin: 20px auto;
     text-align: center;
     font-family: 'Krona One', sans-serif;
-    padding: 17px 10px;
+    padding: 13px 10px;
     width: 226px;
     outline: none;
     color: black;
@@ -223,53 +172,53 @@ body, html {
     float: right;
     width: 50%;
     padding: 0;
-}
-
-.sharebuttons{
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    left: 53%;
-    top: 87%;
-}
-
-
-
-#searchBar {
-    display: block;
-    width: 50%; /* Full-width */
-    font-size: 16px; /* Increase font-size */
-    text-align: center;
-    padding: 12px 20px 12px 40px; /* Add some padding */
-    border: 1px solid #ddd; /* Add a grey border */
-    margin-bottom: 12px; /* Add some space below the input */
-    margin: auto;
-    background-image: url("searchIcon.png"); /* Add a search icon to input */
-    background-position: 10px 12px; /* Position the search icon */
-    background-size: 20px 20px;
-    background-repeat: no-repeat; /* Do not repeat the icon image */
     
 }
 
+sharebuttons{
+    display: inline-block;
+}
+
+#searchBar {
+    margin: 30px auto;
+    display: block;
+    background: black;
+    width: 900px;
+    height: 40px;
+    border-color: azure;
+    border-radius: 15px;
+    padding: 10px;
+    color: azure;    
+}
+
 #carTable {
-    border-collapse: collapse; /* Collapse borders */
-    width: 50%; /* Full-width */
-    border: 4px solid #ddd; /* Add a grey border */
-    font-size: 18px; /* Increase font-size */
+    border-collapse: collapse;
+    width: 900px;
+    background: azure; 
+    border-collapse: separate;
+    font-family: 'Krona One', sans-serif;
+    font-size: 14px;
     margin: 100px auto;
+    border-color: azure; 
 }
 
 #carTable th, #carTable td {
-  text-align: left; /* Left-align text */
-  padding: 12px; /* Add padding */
+    color: azure;
+    text-align: left;
+    padding: 12px;
 }
 
-#carTable tr {
-  /* Add a bottom border to all table rows */
-  border-bottom: 1px solid #ddd;
+#carTable tr{
+    background-color: black;
 }
 
-#carTable tr.header1, #carTable tr:hover {
+#carTable td:hover, #carTable tr:hover{
   /* Add a grey background color to the table header and on hover */
-  background-color: #f1f1f1;
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+#carTable a{
+    text-decoration: none;
+    color: azure;
 }
